--- a/src/templates/django_04.html
+++ b/src/templates/django_04.html
@@ -6,10 +6,14 @@
 </head>
 <body>
 <form action = 'http://localhost:8000/add_user/' method="POST">
-    <p> inter name</p>
-
-
-
+    <p>inter name </p>
+    <input type="text" name="name"><br>
+    <p>inter lastname </p>
+    <input type="text" name="lastname"><br>
+    <p>inter age </p>
+    <input type="text" name="age"><br>
+    <br>
+    <input type="submit" value="click">
 
 </form>
 
