--- a/src/templates/django_04.html
+++ b/src/templates/django_04.html
@@ -5,13 +5,14 @@
     <title>django_04</title>
 </head>
 <body>
-<form action = 'http://localhost:8000/add_user/' method="POST">
+<form action="http://localhost:8000/add_user/" method="post">
     <p>inter name </p>
-    <input type="text" name="name"><br>
+    <br>
+    <p><input type="text" name="name"></p><br>
     <p>inter lastname </p>
-    <input type="text" name="lastname"><br>
+    <p><input type="text" name="lastname"></p><br>
     <p>inter age </p>
-    <input type="text" name="age"><br>
+    <p><input type="text" name="age"></p><br>
     <br>
     <input type="submit" value="click">
 
