--- a/src/school/templates/main.html
+++ b/src/school/templates/main.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ title }}</title>
 </head>
 <body>
 
-<h1>Hello user</h1>
 {% block content %}{% endblock %}
 </body>
 </html>
