--- a/src/school/templates/students.html
+++ b/src/school/templates/students.html
@@ -1,11 +1,14 @@
 {% extends "main.html" %}
 
-{% block title %}show groups{% endblock %}
-
 {% block content %}
-<h1>список групп</h1>
-    {% for group in groups %}
-        <h3>{{ group.name }}</h3>
+<h2>{{ title }}</h2>
+
+<ul>
+    {% for student in students %}
+    <li>
+        <p>{{ student.firstname }} {{ student.lastname }}</p>
+    </li>
 
     {% endfor %}
+</ul>
 {% endblock %}
