--- a/src/catdog/templates/pet.html
+++ b/src/catdog/templates/pet.html
@@ -6,5 +6,8 @@
 <h1>There is a picture {{ name }}</h1>
 
 <img src="{{ url }}"   class="img-thumbnail" alt="Cinque Terre">
-
+<form action="{% url 'save_catdog'%}" method="post">
+    {% csrf_token %}
+    <button type='submit' name='cat' class="btn btn-warning">SAVE this image</button>
+</form>
 {% endblock %}
