--- a/src/catdog/templates/main_catdogs.html
+++ b/src/catdog/templates/main_catdogs.html
@@ -14,8 +14,7 @@
       <a class="nav-link link-light" href="/">HOME</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link link-light" href="/members">MEMBERS</a>
-    </li>
+      <a class="nav-link link-light" href="https://metanit.com/python/tutorial/">Studying Python</a>    </li>
   </ul>
 
   {% block content %}
