--- a/src/catdog/templates/pet_saved.html
+++ b/src/catdog/templates/pet_saved.html
@@ -3,17 +3,17 @@
 {% block title %} catdog {% endblock %}
 
 {% block content %}
-<h1>There is a picture {{ name }}</h1>
+<h1>Here is your picture </h1>
 
-<img src="{{ url }}"   class="img-thumbnail" alt="Cinque Terre">
-<h2> image saved</h2>
+<img src="{{ url }}" class="rounded-circle" alt="Cinque Terre" height="200">
 
+<h2>image saved</h2>
 
 <form action="{% url 'send_email'%}" method="post">
     {% csrf_token %}
-    <h3> введите адрес для отправки</h3>
+    <h3>inter email for send</h3>
     <input type="email" name="mail">
-    <button type='submit' name='url' value="{{ url }}" class="btn btn-warning">send link to</button>
+    <button type="submit" name="url_for_image" value="{{ url }}" class="btn btn-outline-warning">send link to this image</button>
 </form>
 
 {% endblock %}
